--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     <a href="https://www.instagram.com/tattoo_lynx_nl?igsh=MXYwaW5kMGN0ODgxag=="><img class="icon"
                             src="src/img/instagram.svg"></a>
                     <a href="https://www.facebook.com/sofia.lynx.7"><img class="icon" src="src/img/facebook.svg"></a>
-                    <a href=""><img class="icon" src="src/img/whatsapp.svg"></a>
+                    <a href="https://wa.me/+380999490212"><img class="icon" src="src/img/whatsapp.svg"></a>
                 </div>
             </div>
             <div class="links-wrapper-mobile">
@@ -47,7 +47,7 @@
                 <a href="https://www.instagram.com/tattoo_lynx_nl?igsh=MXYwaW5kMGN0ODgxag=="><img class="icon"
                         src="src/img/instagram.svg"></a>
                 <a href="https://www.facebook.com/sofia.lynx.7"><img class="icon" src="src/img/facebook.svg"></a>
-                <a href=""><img class="icon" src="src/img/whatsapp.svg"></a>
+                <a href="https://wa.me/+380999490212"><img class="icon" src="src/img/whatsapp.svg"></a>
             </div>
             <div class="artist-image-wrapper border-glow-round">
                 <img src="src/img/artist.jpg" alt="Artist">
