--- a/index.html
+++ b/index.html
@@ -13,25 +13,17 @@
 
 <body class="body-container d-flex flex-column min-vh-100">
     <div class="image-wrapper border-glow-bottom">
-        <h1>Lorem ipsum</h1>
+        <h1>Ink by Margharyta</h1>
         <img src="src/img/header-image.png" alt="Header Image" class="img-fluid header-image">
     </div>
     <div class="d-flex flex-column sections-wrapper">
         <section class="section-content">
             <div class="d-flex flex-column justify-content-between paragraph-section">
                 <div class="d-flex flex-column align-items-center justify-content-between paragraphs">
-                    <h2>Lorem ipsum</h2>
+                    <h2>About Me</h2>
                     <div class="paragraph-wrapper">
-                        <p class="paragraph">lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum
-                            lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem
-                            ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum
-                            lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem
-                            ipsum lorem ipsum</p>
-                        <p class="paragraph">lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum
-                            lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem
-                            ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum
-                            lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem
-                            ipsum lorem ipsum</p>
+                        <p class="paragraph">Hi, I’m Margharyta — a tattoo artist who turns ideas into lasting artwork. My passion lies in capturing emotion, detail, and meaning in every piece I create. Whether it’s a minimalist design or a full-sleeve project, I approach each tattoo with care, creativity, and precision. I see skin as a canvas, and I love helping people express themselves through body art that’s both beautiful and personal.</p>
+                        <p class="paragraph">Art has always been part of my life. Before tattooing, I studied traditional drawing and painting, which shaped the way I work today. I take time to listen, understand your vision, and design something that feels truly yours. For me, every tattoo is more than just ink — it’s a collaboration, a memory, and a small piece of your story.</p>
                     </div>
                 </div>
                 <div class="links-wrapper">
