--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tattos</title>
+    <title>Ink By Margharyta</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="src/css/main-page.css">
     <link href="https://fonts.googleapis.com/css2?family=Inria+Serif:wght@400;700&display=swap" rel="stylesheet">
@@ -13,7 +13,7 @@
 
 <body class="body-container d-flex flex-column min-vh-100">
     <div class="image-wrapper border-glow-bottom">
-        <h1>Ink by Margharyta</h1>
+        <h1>Ink By Margharyta</h1>
         <img src="src/img/header-image.png" alt="Header Image" class="img-fluid header-image">
     </div>
     <div class="d-flex flex-column sections-wrapper">
